atualização de atividades

--- a/for/fibonacci.html
+++ b/for/fibonacci.html
@@ -17,11 +17,11 @@
             contador = parseInt(prompt("Quantos numeros fibonacci deseja gerar? "))
             alert(atual)
             for (let i = 3; i <= contador; i++) {
-            proximo = anterior + atual; // soma os dois anteriores
-            alert(proximo); // mostra o próximo número
+            proximo = anterior + atual; 
+            alert(proximo); 
 
-            anterior = atual; // anda uma posição
-            atual = proximo;  // anda uma posição
+            anterior = atual; 
+            atual = proximo; 
         }
 
         resposta = prompt("Deseja gerar novamente? (s/n) ");
