atualização de atividades

--- a/tabuada.html
+++ b/tabuada.html
@@ -15,10 +15,10 @@
         let numero,resultado,i
         numero = parseInt(prompt("Digite um numero:"));
         i = 1;
-        resultado =+numero+ ":\n";
+        resultado +=numero+ ":\n";
 
         while (i <= 9) {
-            resultado =+numero+ " x " +i+ " = " + (numero*i) + "\n" 
+            resultado +=numero+ " x " +i+ " = " + (numero*i) + "\n" 
             i++;
         }
 
